--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -27,12 +27,12 @@
       Welcome to Admin Page {{ employee?.name }}
     </div>
     <div style="display: flex; gap: 20px;">
-      <div class="icon-btn" (click)="onSearchClick()">
+      <!-- <div class="icon-btn" (click)="onSearchClick()">
         <i class="fas fa-search"></i>
       </div>
       <div class="icon-btn" (click)="onNotificationClick()">
         <i class="fas fa-bell"></i>
-      </div>
+      </div> -->
       <div class="icon-btn" (click)="onProfileClick()">
         <i class="fas fa-user"></i>
       </div>
