--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -73,7 +73,7 @@
   text-align: left;
   z-index: 10;
 }
-.login-box .title {
+ .title {
   text-align: center;
   color: #9100ff;
   margin-bottom: 25px;
